--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "titleBar.inactiveBackground": "#61dafb99",
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveForeground": "#15202b99",
-    "tab.activeBorder": "#93e6fc"
+    "tab.activeBorder": "#93e6fc",
+    "titleBar.border": "#61dafb"
   },
 }
