--- a/.eslintrc
+++ b/.eslintrc
@@ -1,41 +1,48 @@
 {
-  "extends": [
-    "airbnb",
-    "prettier",
-    "prettier/react"
-  ],
-  "plugins": [
-    "prettier"
-  ],
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 2020,
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
+  "extends": ["airbnb", "prettier", "prettier/react"],
+  "plugins": ["prettier"],
   "rules": {
     "react/jsx-filename-extension": [
       1,
       {
-        "extensions": [
-          ".js",
-          ".jsx"
-        ]
+        "extensions": [".js", ".jsx"]
       }
     ],
-    "react/prop-types": 0,
-    "react/destructuring-assignment": 0,
+    "radix": 0,
+    "no-restricted-syntax": 0,
+    "no-await-in-loop": 0,
+    "no-console": 0,
+    "no-plusplus": 0,
+    "consistent-return": 0,
+    "no-param-reassign": [2, { "props": false }],
+    "no-return-assign": [2, "except-parens"],
+    "no-use-before-define": 0,
+    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }],
+    "import/prefer-default-export": 0,
+    "import/no-cycle": 0,
+    "prefer-template": "off",
+    "react/no-array-index-key": 0,
+    "react/forbid-prop-types": 0,
+    "react/prop-types": [2, { "skipUndeclared": true }],
+    "react/jsx-fragments": [2, "element"],
+    "react/state-in-constructor": 0,
     "react/jsx-props-no-spreading": 0,
-    "no-underscore-dangle": 0,
-    "import/imports-first": [
-      "error",
-      "absolute-first"
-    ],
-    "import/newline-after-import": "error",
-    "prefer-template": "off"
+    "react/destructuring-assignment": 0,
+    "jsx-a11y/click-events-have-key-events": 0
   },
-  "globals": {
-    "window": true,
-    "document": true,
-    "localStorage": true,
-    "FormData": true,
-    "FileReader": true,
-    "Blob": true,
-    "navigator": true
-  },
-  "parser": "babel-eslint"
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "moduleDirectory": ["node_modules", "src/"]
+      }
+    }
+  }
 }
