--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,6 @@
     "no-restricted-syntax": 0,
     "no-await-in-loop": 0,
     "no-console": 0,
-    "no-plusplus": 0,
     "consistent-return": 0,
     "no-param-reassign": [2, { "props": false }],
     "no-return-assign": [2, "except-parens"],
@@ -32,7 +31,7 @@
     "react/no-array-index-key": 0,
     "react/forbid-prop-types": 0,
     "react/prop-types": [2, { "skipUndeclared": true }],
-    "react/jsx-fragments": [2, "element"],
+    "react/jsx-fragments": [2, "syntax"],
     "react/state-in-constructor": 0,
     "react/jsx-props-no-spreading": 0,
     "react/destructuring-assignment": 0,
