--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,20 @@
 {
   "editor.formatOnSave": true,
+  "tsImportSorter.configuration.autoFormat": "onSave",
   "emmet.includeLanguages": {
     "*.js": "javascriptreact"
   },
   "files.associations": {
     "*.js": "javascriptreact"
   },
-  "peacock.color": "#61dafb",
+  "peacock.color": "#221a36",
   "workbench.colorCustomizations": {
-    "titleBar.activeBackground": "#61dafb",
-    "titleBar.inactiveBackground": "#61dafb99",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveForeground": "#15202b99",
     "tab.activeBorder": "#93e6fc",
-    "titleBar.border": "#61dafb"
-  }
+    "titleBar.activeBackground": "#61dafb",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.border": "#61dafb",
+    "titleBar.inactiveBackground": "#61dafb99",
+    "titleBar.inactiveForeground": "#15202b99"
+  },
+  "peacock.remoteColor": "#61dafb"
 }
