--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,12 +9,12 @@
   },
   "peacock.color": "#221a36",
   "workbench.colorCustomizations": {
-    "tab.activeBorder": "#93e6fc",
     "titleBar.activeBackground": "#61dafb",
     "titleBar.activeForeground": "#15202b",
     "titleBar.border": "#61dafb",
     "titleBar.inactiveBackground": "#61dafb99",
-    "titleBar.inactiveForeground": "#15202b99"
+    "titleBar.inactiveForeground": "#15202b99",
+    "tab.activeBorder": "#93e6fc"
   },
   "peacock.remoteColor": "#61dafb"
 }
