Commented out country of infection

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
       "jsx": true
     }
   },
-  "extends": ["airbnb", "prettier", "prettier/react"],
+  "extends": ["airbnb", "airbnb/hooks", "prettier", "prettier/react"],
   "plugins": ["prettier"],
   "rules": {
     "react/jsx-filename-extension": [
@@ -27,15 +27,16 @@
     "no-unused-vars": ["warn", { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }],
     "import/prefer-default-export": 0,
     "import/no-cycle": 0,
-    "react/no-array-index-key": 0,
     "react/forbid-prop-types": 0,
     "react/prop-types": [2, { "skipUndeclared": true }],
-    "react/jsx-fragments": [2, "syntax"],
     "react/state-in-constructor": 0,
     "react/jsx-props-no-spreading": 0,
     "jsx-a11y/click-events-have-key-events": 0
   },
   "settings": {
+    "react": {
+      "version": "detect"
+    },
     "import/resolver": {
       "node": {
         "moduleDirectory": ["node_modules", "src/"]
