--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,8 +23,31 @@
     },
     {
       "label": "npm stop",
-      "type": "process",
-      "command": ["${command:workbench.action.tasks.terminate}"],
+      "type": "shell",
+      "command": "echo '${command:workbench.action.tasks.terminate}'",
+      "presentation": {
+        "echo": true,
+        "reveal": "never",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": true,
+        "clear": false
+      }
+    },
+    {
+      "label": "Open in Chrome Canary",
+      "group": {
+        "kind": "test",
+        "isDefault": true
+      },
+      "command": "Chrome Canary",
+      "linux": {
+        "command": "/mnt/c/Users/petrr/AppData/Local/Google/Chrome SxS/Application/chrome.exe"
+      },
+      "windows": {
+        "command": "C:/Users/petrr/AppData/Local/Google/Chrome SxS/Application/chrome.exe"
+      },
+      "args": ["http://localhost:3000"],
       "presentation": {
         "echo": true,
         "reveal": "never",
@@ -42,10 +65,10 @@
       },
       "command": "Firefox",
       "linux": {
-        "command": "/mnt/c/Program Files/Firefox Developer Edition/firefox.exe"
+        "command": "/mnt/c/Program Files/Mozilla Firefox/firefox.exe"
       },
       "windows": {
-        "command": "C:/Program Files/Firefox Developer Edition/firefox.exe"
+        "command": "C:/Program Files/Mozilla Firefox/firefox.exe"
       },
       "args": ["http://localhost:3000"],
       "presentation": {
@@ -65,10 +88,10 @@
       },
       "command": "Opera",
       "linux": {
-        "command": "/mnt/c/Users/petrr/AppData/Local/Programs/Opera developer/launcher.exe"
+        "command": "/mnt/c/Users/petrr/AppData/Local/Programs/Opera/launcher.exe"
       },
       "windows": {
-        "command": "C:/Users/petrr/AppData/Local/Programs/Opera developer/launcher.exe"
+        "command": "C:/Users/petrr/AppData/Local/Programs/Opera/launcher.exe"
       },
       "args": ["http://localhost:3000"],
       "presentation": {
@@ -88,10 +111,10 @@
       },
       "command": "Brave",
       "linux": {
-        "command": "/mnt/c/Program Files (x86)/BraveSoftware/Brave-Browser-Nightly/Application/brave.exe"
+        "command": "/mnt/c/Program Files (x86)/BraveSoftware/Brave-Browser/Application/brave.exe"
       },
       "windows": {
-        "command": "C:/Program Files (x86)/BraveSoftware/Brave-Browser-Nightly/Application/brave.exe"
+        "command": "C:/Program Files (x86)/BraveSoftware/Brave-Browser/Application/brave.exe"
       },
       "args": ["http://localhost:3000"],
       "presentation": {
@@ -111,10 +134,10 @@
       },
       "command": "Edge",
       "linux": {
-        "command": "/mnt/c/Users/petrr/AppData/Local/Microsoft/Edge SxS/Application/msedge.exe"
+        "command": "/mnt/c/Program Files (x86)/Microsoft/Edge/Application/msedge.exe"
       },
       "windows": {
-        "command": "C:/Users/petrr/AppData/Local/Microsoft/Edge SxS/Application/msedge.exe"
+        "command": "C:/Program Files (x86)/Microsoft/Edge/Application/msedge.exe"
       },
       "args": ["http://localhost:3000"],
       "presentation": {
