--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,7 @@
     "titleBar.activeForeground": "#15202b",
     "titleBar.border": "#61dafb",
     "titleBar.inactiveBackground": "#61dafb99",
-    "titleBar.inactiveForeground": "#15202b99",
-    "tab.activeBorder": "#93e6fc"
+    "titleBar.inactiveForeground": "#15202b99"
   },
   "peacock.remoteColor": "#61dafb"
 }
