--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,13 +11,13 @@
   "files.associations": {
     "*.js": "javascriptreact"
   },
-  "peacock.color": "#221a36",
-  "peacock.remoteColor": "#221a36",
+  "peacock.color": "#61dafb",
+  "peacock.remoteColor": "#61dafb",
   "tsImportSorter.configuration.autoFormat": "onSave",
   "workbench.colorCustomizations": {
-    "titleBar.activeBackground": "#221a36",
-    "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#221a3699",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "titleBar.activeBackground": "#61dafb",
+    "titleBar.activeForeground": "#15202b",
+    "titleBar.inactiveBackground": "#61dafb99",
+    "titleBar.inactiveForeground": "#15202b99"
   }
 }
