--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^16.13.1",
     "react-headroom": "^3.0.0",
     "react-scripts": "3.4.3",
-    "recharts": "^2.0.0-beta.7",
+    "recharts": "^1.8.5",
     "styled-components": "^5.2.0"
   },
   "scripts": {
