--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,12 @@
       "name": "Chrome",
       "type": "pwa-chrome",
       "runtimeExecutable": "C:\\Program Files (x86)\\BraveSoftware\\Brave-Browser-Nightly\\Application\\brave.exe",
-      "userDataDir": "C:\\Users\\petrr\\AppData\\Local\\Temp\\vscode-remote-wsl\\dataDir",
       "preLaunchTask": "npm: start",
       "postDebugTask": "npm stop",
       "request": "launch",
       "url": "http://localhost:3000",
       "webRoot": "${workspaceFolder}/src",
+      "userDataDir": false,
       "sourceMapPathOverrides": {
         "webpack:///src/*": "${webRoot}/*"
       }
