--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-countup": "^4.3.3",
     "react-dom": "^16.14.0",
     "react-headroom": "^3.0.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
     "recharts": "^1.8.5",
     "styled-components": "^5.2.0"
   },
@@ -39,7 +39,7 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.13.0",
+    "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
