--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.20.0",
-    "react": "^16.14.0",
+    "axios": "^0.21.0",
+    "react": "^17.0.1",
     "react-countup": "^4.3.3",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.1",
     "react-headroom": "^3.0.0",
-    "react-scripts": "^3.4.4",
+    "react-scripts": "4.0.0",
     "recharts": "^1.8.5",
     "styled-components": "^5.2.0"
   },
@@ -37,13 +37,13 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
+    "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^2.5.1"
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
