--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,12 @@
     {
       "name": "Chrome",
       "type": "pwa-chrome",
-      "runtimeExecutable": "C:\\Program Files (x86)\\BraveSoftware\\Brave-Browser-Nightly\\Application\\brave.exe",
+      "runtimeExecutable": "/Applications/Google Chrome Dev.app/Contents/MacOS/Google Chrome Dev",
       "preLaunchTask": "npm: start",
       "postDebugTask": "npm stop",
       "request": "launch",
       "url": "http://localhost:3000",
       "webRoot": "${workspaceFolder}/src",
-      "userDataDir": false,
       "sourceMapPathOverrides": {
         "webpack:///src/*": "${webRoot}/*"
       }
