--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
       "jsx": true
     }
   },
-  "extends": ["airbnb", "airbnb/hooks", "prettier", "prettier/react"],
+  "extends": ["airbnb", "airbnb/hooks", "prettier", "prettier"],
   "plugins": ["prettier"],
   "globals": {
     "localStorage": true,
